crates/mpl-lang/tests/errors/unknown_function.mpl
dataset:metric | align to 5m using unknown_func

